Argocd/services-ArgoCDrollout+Istio/svc.yaml
# 1. KUBERNETES SERVICE (Chỉ dùng 1 Service duy nhất)
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    # LƯU Ý: KHÔNG đưa label "version" vào đây. 
    # Label version sẽ do Istio DestinationRule quản lý.
    app: my-app
